--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
       <div class="col-lg-12">
         <h1 class="text-center">Crew Project Signup</h1>
       </div>
+      <div class="col-lg-4">
+        <h3>Add new project</h3>
+        <form method=POST role="form" action="http://signup.pranav.io:3000/adduser">
+          <div class="form-group">
+            <div class="col-md-9">
+              <input class="form-control" type="text" name="project" placeholder="Project Name">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-md-9">
+              <input class="form-control" type="text" name="user" placeholder="Your name.">
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
