Added contact info

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
   <body>
     <div class="container">
       <div class="col-lg-12">
-        <h1 class="text-center">Crew Project Signup</h1>
+        <h1 class="text-center">Crew Project Signup.</h1>
+        <h4 class="text-center">Questions? Contact Pranav, hyfi (at) ccs.neu.edu</h4>
       </div>
       <div class="col-lg-4">
         <h3>Add new project</h3>
