Added some spacing

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       }
 
     </script>
+    <style>
+      .col-md-8, .col-lg-12 { margin-bottom:100px }
+    </style>
   </head>
   <body>
     <div class="container">
