--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Signup</title>
+    <title>Crew Project Signup</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script>
-    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       .box  {
         min-height: 200px;
@@ -46,15 +45,17 @@
           <h3>Projects</h3>
           <ul class="text-center">
             <li><a href="#github">Github API Hacks</a></li>
-            <li><a href="#cloud">Cloud</a></li>
             <li><a href="#dds">Digital Display System</a></li>
-            <li><a href="#pitcam">Flying Pitcam</a></li>
+            <li><a href="#maps">West Village H Maps</a></li>
+            <li><a href="#unixgroup">Self Serve UNIX Groups</a></li>
+            <li><a href="#accounts">CCIS Accounts</a></li>
+            <li><a href="#cloud">Cloud</a></li>
             <li><a href="#racktables">Racktables</a></li>
+            <li><a href="#pitcam">Flying Pitcam</a></li>
             <li><a href="#cgibox">CCIS Hosted Applications (CGI BOX)</a></li>
             <li><a href="#packetfence">CCIS Wireless Security / Packetfence.</a></li>
             <li><a href="#nagios">Network Monitoring (Nagios / Sensu).</a></li>
             <li><a href="#ipv6">IPv6.</a></li>
-
           </ul>
 
         </div>
@@ -81,10 +82,14 @@
         </div>
         <div class="col-md-4">
           <h3>Signup</h3>
-          <div class="form-group">
-            <input type='text' placeholder='Your Name.'>
-            <button>Signup</button>
-          </div>
+          <form role="form">
+            <div class="form-group">
+              <label for="Name">Name</label>
+              <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
+            </div>
+            <input type="hidden" name="project" value="github">
+            <button type="submit" class="btn btn-primary">Signup</button>
+          </form>
         </div>
       </div>
     </div>
@@ -110,13 +115,107 @@
         </div>
         <div class="col-md-4">
           <h3>Signup</h3>
-          <div class="form-group">
-            <input type='text' placeholder='Your Name.'>
-            <button>Signup</button>
-          </div>
+          <form role="form">
+            <div class="form-group">
+              <label for="Name">Name</label>
+              <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
+            </div>
+            <input type="hidden" name="project" value="dds">
+            <button type="submit" class="btn btn-primary">Signup</button>
+          </form>
         </div>
       </div>
-    </div>    
+    </div>
+
+    <div class="box">
+      <div class="container">
+        <div class="col-lg-12">
+          <h1><a id="maps"></a>West Village H Maps.</h1>
+        </div>
+        <div class="col-md-4">
+          <h3>Description</h3>
+          <p>A few years ago, a group of students created <a href="http://maps.ccs.neu.edu">WVH Maps</a>, a service to map out West Village H. It would be super cool if we could finish the project. And make a 3D version (I'm looking at you, Dan Wolf).</p>
+        </div>
+        <div class="col-md-4">
+          <h3>Things you will learn.</h3>
+          <ul>
+            <li>Google Maps API</li>
+            <li>Javascript</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h3>Signup</h3>
+          <form role="form">
+            <div class="form-group">
+              <label for="Name">Name</label>
+              <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
+            </div>
+            <button type="submit" class="btn btn-primary">Signup</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="box">
+      <div class="container">
+        <div class="col-lg-12">
+          <h1><a id="unixgroup"></a>Self Serve UNIX Groups.</h1>
+        </div>
+        <div class="col-md-4">
+          <h3>Description</h3>
+          <p>A major problem with CCIS infrastructure is that you can't manage your own UNIX groups. For example, for every person that we add to Crew, we had to ask Systems to add them to the offical UNIX group. Professors use UNIX groups for giving Tutors and TAs permission to homework assignments for grading. Each person has to go through Systems and it would be much better if there was a web interface so people could help themselves.</p>
+        </div>
+        <div class="col-md-4">
+          <h3>Things you will learn.</h3>
+          <ul>
+            <li>Linux Administration</li>
+            <li>Directory Services such as NIS and LDAP</li>
+            <li>Web Development in Ruby/Python/PHP/Node or whatever</li>
+            <li>How to interface with existing infrastructure</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h3>Signup</h3>
+          <form role="form">
+            <div class="form-group">
+              <label for="Name">Name</label>
+              <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
+            </div>
+            <button type="submit" class="btn btn-primary">Signup</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="container">
+        <div class="col-lg-12">
+          <h1><a id="accounts"></a>CCIS Accounts.</h1>
+        </div>
+        <div class="col-md-4">
+          <h3>Description</h3>
+          <p>You all know the CCIS account creation process isn't ideal. Let's fix that problem. Whether it be creating a webpage to replace the account program or automating the reset password business, I'm sure we can find a better way.</p>
+        </div>
+        <div class="col-md-4">
+          <h3>Things you will learn.</h3>
+          <ul>
+            <li>Web Development in whatever language you want.</li>
+            <li>Interfacing with the CCIS account program.</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h3>Signup</h3>
+          <form role="form">
+            <div class="form-group">
+              <label for="Name">Name</label>
+              <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
+            </div>
+            <button type="submit" class="btn btn-primary">Signup</button>
+          </form>
+        </div>
+      </div>
+    </div>
 
     <div class="box">
       <div class="container">
@@ -139,14 +238,16 @@
         </div>
         <div class="col-md-4">
           <h3>Signup</h3>
-          <div class="form-group">
-            <input type='text' placeholder='Your Name.'>
-            <button>Signup</button>
-          </div>
+          <form role="form">
+            <div class="form-group">
+              <label for="Name">Name</label>
+              <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
+            </div>
+            <button type="submit" class="btn btn-primary">Signup</button>
+          </form>
         </div>
       </div>
     </div>
-
 
     <div class="box">
       <div class="container">
@@ -168,11 +269,14 @@
         </div>
         <div class="col-md-4">
           <h3>Signup</h3>
-          <div class="form-group">
-            <input type='text' placeholder='Your Name.'>
-            <button>Signup</button>
+          <form role="form">
+            <div class="form-group">
+              <label for="Name">Name</label>
+              <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
+            </div>
+            <button type="submit" class="btn btn-primary">Signup</button>
+          </form>
           </div>
-        </div>
       </div>
     </div>
 
@@ -196,10 +300,13 @@
         </div>
         <div class="col-md-4">
           <h3>Signup</h3>
-          <div class="form-group">
-            <input type='text' placeholder='Your Name.'>
-            <button>Signup</button>
-          </div>
+          <form role="form">
+            <div class="form-group">
+              <label for="Name">Name</label>
+              <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
+            </div>
+            <button type="submit" class="btn btn-primary">Signup</button>
+          </form>
         </div>
       </div>
     </div>
@@ -224,10 +331,13 @@
         </div>
         <div class="col-md-4">
           <h3>Signup</h3>
-          <div class="form-group">
-            <input type='text' placeholder='Your Name.'>
-            <button>Signup</button>
-          </div>
+          <form role="form">
+            <div class="form-group">
+              <label for="Name">Name</label>
+              <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
+            </div>
+            <button type="submit" class="btn btn-primary">Signup</button>
+          </form>
         </div>
       </div>
     </div>
@@ -251,10 +361,13 @@
         </div>
         <div class="col-md-4">
           <h3>Signup</h3>
-          <div class="form-group">
-            <input type='text' placeholder='Your Name.'>
-            <button>Signup</button>
-          </div>
+          <form role="form">
+            <div class="form-group">
+              <label for="Name">Name</label>
+              <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
+            </div>
+            <button type="submit" class="btn btn-primary">Signup</button>
+          </form>
         </div>
       </div>
     </div>
@@ -279,14 +392,16 @@
         </div>
         <div class="col-md-4">
           <h3>Signup</h3>
-          <div class="form-group">
-            <input type='text' placeholder='Your Name.'>
-            <button>Signup</button>
-          </div>
+          <form role="form">
+            <div class="form-group">
+              <label for="Name">Name</label>
+              <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
+            </div>
+            <button type="submit" class="btn btn-primary">Signup</button>
+          </form>
         </div>
       </div>
     </div>
-
 
     <div class="box">
       <div class="container">
@@ -308,12 +423,16 @@
         </div>
         <div class="col-md-4">
           <h3>Signup</h3>
-          <div class="form-group">
-            <input type='text' placeholder='Your Name.'>
-            <button>Signup</button>
-          </div>
+          <form role="form">
+            <div class="form-group">
+              <label for="Name">Name</label>
+              <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
+            </div>
+            <button type="submit" class="btn btn-primary">Signup</button>
+          </form>
         </div>
       </div>
     </div>
+
   </body>
 </html>
