Frontend really done.

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
   <body>
     <div class="box">
       <div class="container">
-        <h1>Crew Project Signup</h1>
-        <h4>If you have any questions, contact Pranav Gandhi. hyfi@ccs.neu.edu</h4>
         <div class="col-lg-12">
-          <h3>Projects</h3>
+        <h1>Crew Project Signup</h1>
+        <h3>Please sign up for up to two projects for the Fall 2013 semester.</h3>
+
           <ul class="text-center">
             <li><a href="#github">Github API Hacks</a></li>
+            <li><a href="#accounts">CCIS Accounts</a></li>
             <li><a href="#dds">Digital Display System</a></li>
             <li><a href="#maps">West Village H Maps</a></li>
             <li><a href="#unixgroup">Self Serve UNIX Groups</a></li>
-            <li><a href="#accounts">CCIS Accounts</a></li>
             <li><a href="#cloud">Cloud</a></li>
             <li><a href="#racktables">Racktables</a></li>
             <li><a href="#pitcam">Flying Pitcam</a></li>
@@ -88,6 +88,35 @@
               <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
             </div>
             <input type="hidden" name="project" value="github">
+            <button type="submit" class="btn btn-primary">Signup</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="container">
+        <div class="col-lg-12">
+          <h1><a id="accounts"></a>CCIS Accounts.</h1>
+        </div>
+        <div class="col-md-4">
+          <h3>Description</h3>
+          <p>You all know the CCIS account creation process isn't ideal. Let's fix that problem. Whether it be creating a webpage to replace the account program or automating the reset password business, I'm sure we can find a better way.</p>
+        </div>
+        <div class="col-md-4">
+          <h3>Things you will learn.</h3>
+          <ul>
+            <li>Web Development in whatever language you want.</li>
+            <li>Interfacing with the CCIS account program.</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h3>Signup</h3>
+          <form role="form">
+            <div class="form-group">
+              <label for="Name">Name</label>
+              <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
+            </div>
             <button type="submit" class="btn btn-primary">Signup</button>
           </form>
         </div>
@@ -173,35 +202,6 @@
             <li>Directory Services such as NIS and LDAP</li>
             <li>Web Development in Ruby/Python/PHP/Node or whatever</li>
             <li>How to interface with existing infrastructure</li>
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <h3>Signup</h3>
-          <form role="form">
-            <div class="form-group">
-              <label for="Name">Name</label>
-              <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
-            </div>
-            <button type="submit" class="btn btn-primary">Signup</button>
-          </form>
-        </div>
-      </div>
-    </div>
-
-    <div class="box">
-      <div class="container">
-        <div class="col-lg-12">
-          <h1><a id="accounts"></a>CCIS Accounts.</h1>
-        </div>
-        <div class="col-md-4">
-          <h3>Description</h3>
-          <p>You all know the CCIS account creation process isn't ideal. Let's fix that problem. Whether it be creating a webpage to replace the account program or automating the reset password business, I'm sure we can find a better way.</p>
-        </div>
-        <div class="col-md-4">
-          <h3>Things you will learn.</h3>
-          <ul>
-            <li>Web Development in whatever language you want.</li>
-            <li>Interfacing with the CCIS account program.</li>
           </ul>
         </div>
         <div class="col-md-4">
