Added a hidden input field

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
               <label for="Name">Name</label>
               <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
             </div>
+            <input type="hidden" name="project" value="accounts">
             <button type="submit" class="btn btn-primary">Signup</button>
           </form>
         </div>
@@ -179,6 +180,7 @@
               <label for="Name">Name</label>
               <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
             </div>
+            <input type="hidden" name="project" value="maps">
             <button type="submit" class="btn btn-primary">Signup</button>
           </form>
         </div>
@@ -211,6 +213,7 @@
               <label for="Name">Name</label>
               <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
             </div>
+            <input type="hidden" name="project" value="unixgroup">
             <button type="submit" class="btn btn-primary">Signup</button>
           </form>
         </div>
@@ -243,6 +246,7 @@
               <label for="Name">Name</label>
               <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
             </div>
+            <input type="hidden" name="project" value="cloud">
             <button type="submit" class="btn btn-primary">Signup</button>
           </form>
         </div>
@@ -274,6 +278,7 @@
               <label for="Name">Name</label>
               <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
             </div>
+            <input type="hidden" name="project" value="racktables">
             <button type="submit" class="btn btn-primary">Signup</button>
           </form>
           </div>
@@ -305,6 +310,7 @@
               <label for="Name">Name</label>
               <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
             </div>
+            <input type="hidden" name="project" value="pitcam">
             <button type="submit" class="btn btn-primary">Signup</button>
           </form>
         </div>
@@ -336,6 +342,7 @@
               <label for="Name">Name</label>
               <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
             </div>
+            <input type="hidden" name="project" value="cgibox">
             <button type="submit" class="btn btn-primary">Signup</button>
           </form>
         </div>
@@ -366,6 +373,7 @@
               <label for="Name">Name</label>
               <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
             </div>
+            <input type="hidden" name="project" value="packetfence">
             <button type="submit" class="btn btn-primary">Signup</button>
           </form>
         </div>
@@ -397,6 +405,7 @@
               <label for="Name">Name</label>
               <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
             </div>
+            <input type="hidden" name="project" value="nagios">
             <button type="submit" class="btn btn-primary">Signup</button>
           </form>
         </div>
@@ -428,6 +437,7 @@
               <label for="Name">Name</label>
               <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter Name.">
             </div>
+            <input type="hidden" name="project" value="ipv6">
             <button type="submit" class="btn btn-primary">Signup</button>
           </form>
         </div>
