Changed signup text

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             project: project,
             user: user
           }, function(e){
-            $(that).parent().html('<h4 class="text-center">All done!</h4>');
+            $(that).parent().html('<h4 class="text-center">You\'ve been signed up!</h4>');
           })
 
         })
