Append the user after hitting signup.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             user: user
           }, function(e){
             $(that).parent().html('<h4 class="text-center">You\'ve been signed up!</h4>');
+            $('#'+project+'-members').append(', ' + user)
           })
 
         })
